<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPersonActivity">

    <TextView
        android:id="@+id/add_person_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_person_title_text"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/default_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_person_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:visibility="visible"
        android:onClick="onImageClick"
        android:contentDescription="@string/add_person_image_desc"
        app:layout_constraintEnd_toEndOf="@+id/add_person_title"
        app:layout_constraintStart_toStartOf="@+id/add_person_title"
        app:layout_constraintTop_toBottomOf="@+id/add_person_title"
        app:srcCompat="@drawable/ic_add_photo" />

    <EditText
        android:id="@+id/add_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:hint="@string/add_person_name_text"
        app:layout_constraintEnd_toEndOf="@+id/add_person_image"
        app:layout_constraintStart_toStartOf="@+id/add_person_image"
        app:layout_constraintTop_toBottomOf="@+id/add_person_image" />

    <Button
        android:id="@+id/add_person_button"
        android:layout_width="@dimen/secondary_button_width"
        android:layout_height="@dimen/secondary_button_height"
        android:layout_marginTop="64dp"
        android:text="@string/add_person_button_text"
        android:onClick="onAddPersonButtonClick"
        android:background="@color/colorSuccess"
        app:layout_constraintEnd_toEndOf="@+id/add_person_name"
        app:layout_constraintStart_toStartOf="@+id/add_person_name"
        app:layout_constraintTop_toBottomOf="@+id/add_person_name" />

</androidx.constraintlayout.widget.ConstraintLayout>