...
    <string name="quiz_next_button_text">Next person</string>
    <string name="quiz_correct_guess_text">Correct! You gained a point!</string>
    <string name="quiz_wrong_guess_text">Wrong! The correct name was:</string>
    <string name="quiz_input_hint">Who is this?</string>
    <string name="add_person_choose_image_title">Select an image</string>
    <string name="add_person_dialog_title">Choose an option</string>
    <string name="add_person_dialog_camera_option">Take new photo</string>
    <string name="add_person_dialog_picker_option">Choose an image from the device</string>
    <string name="settings_key">settings</string>
    <string name="settings_userdata_category_title">User data</string>
    <string name="settings_userdata_category_key">settings_user_data</string>
    <string name="settings_storage_category_title">Storage</string>
    <string name="settings_storage_category_key">settings_storage</string>
...
