<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/quiz_title_text"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/default_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quiz_image_container_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/quiz_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_title">

        <ImageView
            android:id="@+id/quiz_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/quiz_person_image_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person_outline_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/quiz_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/quiz_current_score_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ViewSwitcher
            android:id="@+id/quiz_view_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <EditText
                android:id="@+id/quiz_guess_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quiz_input_hint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/quiz_guess_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </ViewSwitcher>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quiz_guess_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="12dp"
                android:onClick="onGuessButtonClick"
                android:text="@string/quiz_guess_button_text"
                android:visibility="invisible" />

            <Button
                android:id="@+id/quiz_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="12dp"
                android:onClick="onNextButtonClick"
                android:text="@string/quiz_next_button_text"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/quiz_current_score_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/quiz_current_score_text"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/quiz_current_score_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quiz_current_score_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/quiz_toggle_quiz_button"
        app:layout_constraintEnd_toEndOf="@+id/quiz_current_score_info"
        app:layout_constraintStart_toStartOf="@+id/quiz_current_score_info" />

    <!--<Button-->
        <!--android:id="@+id/quiz_start_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="32dp"-->
        <!--android:onClick="onStartButtonClick"-->
        <!--android:text="@string/quiz_start_button_text"-->
        <!--app:layout_constraintBaseline_toBaselineOf="@+id/quiz_stop_button"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->

    <!--<Button-->
        <!--android:id="@+id/quiz_stop_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="32dp"-->
        <!--android:layout_marginBottom="64dp"-->
        <!--android:text="@string/quiz_stop_button_text"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/quiz_best_score_info"-->
        <!--app:layout_constraintEnd_toEndOf="parent" />-->

    <ToggleButton
        android:id="@+id/quiz_toggle_quiz_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:onClick="onToggleQuizButtonClick"
        android:textOn="@string/quiz_stop_button_text"
        android:textOff="@string/quiz_start_button_text"
        app:layout_constraintBottom_toTopOf="@+id/quiz_best_score_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quiz_best_score_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/quiz_best_score_text"
        app:layout_constraintBottom_toTopOf="@+id/quiz_best_score_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quiz_best_score_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/quiz_best_score_info"
        app:layout_constraintStart_toStartOf="@+id/quiz_best_score_info" />
</androidx.constraintlayout.widget.ConstraintLayout>